@@ -18,6 +18,8 @@ for fn in sys.argv[1:]:
 f = focusing.Focusing()
 
 b,ftype = f.findBestFWHM(tries)
+# for way off-focus, low S/N images..
+#b,ftype = f.findBestFWHM(tries,min_stars=10,filterGalaxies=False,threshold=5)
 
 print b
 
