@@ -1,3 +1,6 @@
+2010-12-26
+ * added parameters for focusing weak images (e.g. from Ondrejov 65cm)
+
 2010-12-15
  * added reset-constraints option to rts2-target
 
